<resources>
    <string name="app_name">shadow_plan</string>

    <!--输入数据页面 -->
    <string name="edit_data">每日数据输入</string>
    <string name="edit_imei">请输入手机设备号</string>
    <string name="edit_date">请输入当前日期</string>
    <string name="edit_single_number">请输入当日加好友数量</string>
    <string name="confirm">确定</string>

    <!--数据透视页面 -->
    <string name="everyday_data">每日加好友数量</string>
    <string name="permobile_data">每台设备逐日加好友数量</string>
    <string name="total_data">累积加好友总数量</string>

    <!--每日加好友数据透视页面 -->
    <string name="everyday_describe_one">上图为每日加好友数量的数据透视图</string>
    <string name="everyday_describe_two">其中横轴表示日期，纵轴表示好友数量</string>

    <!--每日加好友数据透视页面 -->
    <string name="permobile_describe_one">上图为每台设备逐日加好友数量的数据透视图</string>
    <string name="permobile_describe_two">其中横轴表示日期，纵轴表示好友数量</string>
    <string name="permobile_describe_three">不同颜色曲线表示不同的手机设备</string>

    <!--累积加好友数据透视页面 -->
    <string name="total_describe_one">上图为累积加好友数量的数据透视图</string>
    <string name="total_describe_two">其中横轴表示日期，纵轴表示好友总数量</string>
</resources>
